kubernetes/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev-todo-app
  labels:
    environment: development
    app: todo-app
    project: cloudbees-unify-reference
